new SDO community fixes

--- a/sm/sm-temp/main/default/layouts/Asset-RC_SM Asset Layout.layout-meta.xml
+++ b/sm/sm-temp/main/default/layouts/Asset-RC_SM Asset Layout.layout-meta.xml
@@ -94,7 +94,12 @@
                 <field>RenewalTermUnit</field>
             </layoutItems>
         </layoutColumns>
-        <layoutColumns/>
+        <layoutColumns>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>QuantityIncreasePricingType</field>
+            </layoutItems>
+        </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
     <layoutSections>
