--- a/sm/sm-b2b-connector/main/default/staticresources/B2B_Fonts_Bold.css
+++ b/sm/sm-b2b-connector/main/default/staticresources/B2B_Fonts_Bold.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CiscoSansBold';
-    src: url(/sfsites/c/resource/r1sm__CiscoSansBold), url(/sfsites/c/resource/CiscoSansBold)
+    src: url(/sfsites/c/resource/CiscoSansBold)
 }
 
 
