--- a/sm/sm-b2b-connector/main/default/staticresources/B2B_Fonts.css
+++ b/sm/sm-b2b-connector/main/default/staticresources/B2B_Fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'CiscoSans';
-    src: url(/sfsites/c/resource/r1sm__CiscoSans), url(/sfsites/c/resource/CiscoSans)
+    src: url(/sfsites/c/resource/CiscoSans)
 }
 
 @font-face {
