--- a/sm/sm-b2b-connector/main/default/lwc/b2b_orderConfirmationHeader/b2b_orderConfirmationHeader.css
+++ b/sm/sm-b2b-connector/main/default/lwc/b2b_orderConfirmationHeader/b2b_orderConfirmationHeader.css
@@ -1,7 +1,7 @@
 .titel{
     padding: 80px 40px;
-    background: linear-gradient(to right, #58af74 0%, #398e6a 100%);
-    color: #fff;
+    background: linear-gradient(to right, #e88510 0%, #398e6a 100%);
+    color: #000;
     font-size: 42px;
     text-align: center;
     align-content: center;
